<resources>
    <string name="app_name">BMI</string>
    <string name="this_is_first_photo">This is first photo</string>
    <string name="provide_mass">Provide mass in kg</string>
    <string name="mass">Mass [kg]</string>
    <string name="height">Height [cm]</string>
    <string name="provide_height">Provide height in cm</string>
    <string name="bmi">BMI</string>
    <string name="count">Count</string>
    <string name="switch_activity">Switch Activity</string>
    <string name="height_restriction">Height should be in interval 100-200</string>
    <string name="mass_restriction">Mass should be in interval 20-150</string>
    <string name="wrong_data">Wrong data</string>
    <string name="underweight">Underweight</string>
    <string name="normal_weight">Normal</string>
    <string name="over_weight">Overweight</string>
    <string name="obese_weight">Obese</string>
    <string name="extremly_obese_weight">Extremly obese</string>
    <string name="score">Score</string>
    <string name="score_text">ScoreText</string>
    <string name="color">Color</string>
    <string name="about">About</string>
    <string name="change">Change Units</string>
    <string name="history">History</string>
    <string name="mass_lb">Mass [lb]</string>
    <string name="height_in">Height [in]</string>
    <string name="height_restriction_imp">Height should be in interval 40-80</string>
    <string name="mass_restriction_imp">Mass should be in interval 30-300</string>
    <string name="about_photo">About_photo</string>
    <string name="provide_mass_lb">Provide mass in lb</string>
    <string name="provide_height_in">Provide height in in</string>
    <string name="author_info">Marcel Krakowiak</string>
    <string name="student">Made by student</string>
    <string name="result_info">result_info</string>
    <string name="height_info">height_info</string>
    <string name="mass_info">mass_info</string>
    <string name="your_result">Your result</string>
    <string name="your_height">Your height</string>
    <string name="your_mass">Your mass</string>
    <string name="your_bmi">Your BMI</string>
    <string name="height_list">height_list</string>
    <string name="mass_list">mass_list</string>
    <string name="bmi_list">bmi_list</string>
    <string name="cm"> cm</string>
    <string name="kg"> kg</string>
    <string name="in_unit">in</string>
    <string name="lb">lb</string>
    <string name="switcho">Switch for fun</string>
    <string name="just_height">Height</string>
    <string name="just_mass">Mass</string>
    <string name="date_list">date_list</string>
    <string name="date">Date: </string>
    <string name="date_id">Date</string>
</resources>
