<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".InfoBMI">

    <TextView
        android:id="@+id/bmi_result_rl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:textSize="32sp"
        android:visibility="visible"
        tools:text="@string/bmi" />

    <TextView
        android:id="@+id/height_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:contentDescription="@string/height"
        android:text="@string/height"
        android:textSize="32sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/mass_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:textSize="32sp"
        android:visibility="visible"
        tools:text="@string/mass" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/height_display"
        android:text="@string/your_height"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/mass_display"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/your_mass"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/your_bmi"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/your_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:text="@string/your_result"
        android:textSize="17sp" />


</RelativeLayout>