<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:contentDescription="@string/about_photo"
        app:srcCompat="@drawable/about" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author_info" />

    <ImageView
        android:id="@+id/made_student"
        android:layout_width="match_parent"
        android:layout_height="236dp"
        android:contentDescription="@string/student"
        app:srcCompat="@drawable/made_by_student" />
</LinearLayout>