<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/bmi_row_id"
        android:layout_width="@dimen/bmi_text_row_width"
        android:layout_height="@dimen/bmi_text_height"
        android:layout_marginStart="@dimen/bmi_text_start"
        android:layout_marginLeft="@dimen/bmi_text_left"
        android:layout_marginBottom="@dimen/bmi_text_bottom"
        android:contentDescription="@string/bmi"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/height_row_id"
        android:layout_width="@dimen/height_row_width"
        android:layout_height="@dimen/height_row_height"
        android:layout_marginStart="@dimen/height_row_start"
        android:layout_marginLeft="@dimen/height_row_left"
        android:contentDescription="@string/height"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bmi_row_id" />

    <TextView
        android:id="@+id/mass_display_row_id"
        android:layout_width="@dimen/mass_row_width"
        android:layout_height="@dimen/mass_row_heigth"
        android:layout_marginStart="@dimen/mass_row_start"
        android:layout_marginLeft="@dimen/mass_row_left"
        android:layout_marginEnd="@dimen/mass_row_end"
        android:layout_marginRight="@dimen/mass_row_right"
        android:contentDescription="@string/mass"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/height_row_id" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="@dimen/height_row_text_width"
        android:layout_height="@dimen/height_row_text_heigth"
        android:layout_marginStart="@dimen/heigth_row_text_start"
        android:layout_marginLeft="@dimen/heigth_row_text_left"
        android:layout_marginBottom="@dimen/heigth_row_text_bottom"
        android:text="@string/just_height"
        app:layout_constraintBottom_toTopOf="@+id/height_row_id"
        app:layout_constraintStart_toEndOf="@+id/bmi_row_id" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="@dimen/mass_row_text_width"
        android:layout_height="@dimen/mass_row_text_heigth"
        android:layout_marginStart="@dimen/mass_row_text_start"
        android:layout_marginLeft="@dimen/mass_row_text_left"
        android:layout_marginEnd="@dimen/mass_row_text_end"
        android:layout_marginRight="@dimen/mass_row_text_right"
        android:layout_marginBottom="@dimen/mass_row_text_bottom"
        android:text="@string/just_mass"
        app:layout_constraintBottom_toTopOf="@+id/mass_display_row_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/bmi_text_row_start"
        android:layout_marginLeft="@dimen/bmi_text_row_left"
        android:layout_marginBottom="@dimen/bmi_text_row_bottom"
        android:text="@string/bmi"
        app:layout_constraintBottom_toTopOf="@+id/bmi_row_id"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/date_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/date_row_text_top"
        android:text="@string/date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmi_row_id"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/date_row_id"
        android:layout_width="@dimen/date_row_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/date_row_start"
        android:layout_marginLeft="@dimen/date_row_left"
        android:contentDescription="@string/date_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/date_row" />
</androidx.constraintlayout.widget.ConstraintLayout>