<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <EditText
            android:id="@+id/MassInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mass_start_margin"
            android:layout_marginLeft="@dimen/mass_left_margin"
            android:layout_marginTop="@dimen/mass_top_margin"
            android:layout_marginEnd="@dimen/mass_end_margin"
            android:layout_marginRight="@dimen/my_eighth_dp"
            android:maxLength="4"
            android:ems="10"
            android:hint="@string/provide_mass"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mass"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/mass"
            android:layout_width="0dp"
            android:layout_height="@dimen/mass_text_height"
            android:layout_marginStart="@dimen/mass_text_start"
            android:layout_marginLeft="@dimen/mass_text_left"
            android:layout_marginTop="@dimen/mass_text_top"
            android:text="@string/mass"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_text_height"
            android:layout_marginStart="@dimen/height_text_start"
            android:layout_marginLeft="@dimen/height_text_left"
            android:layout_marginTop="@dimen/height_text_top"
            android:layout_marginEnd="@dimen/height_text_end"
            android:layout_marginRight="@dimen/height_text_right"
            android:text="@string/height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MassInput" />

        <EditText
            android:id="@+id/HeightInput"
            android:layout_width="@dimen/height_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/height_start"
            android:layout_marginLeft="@dimen/height_left"
            android:layout_marginTop="@dimen/height_top"
            android:layout_marginEnd="@dimen/height_end"
            android:layout_marginRight="@dimen/height_right"
            android:maxLength="4"
            android:layout_marginBottom="@dimen/height_bottom"
            android:ems="10"
            android:hint="@string/provide_height"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.0"
            tools:targetApi="o" />

        <Button
            android:id="@+id/countButton"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/button_start"
            android:layout_marginLeft="@dimen/button_left"
            android:layout_marginEnd="@dimen/button_end"
            android:layout_marginRight="@dimen/button_right"
            android:layout_marginBottom="@dimen/button_bottom"
            android:text="@string/count"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/score_start"
            android:layout_marginLeft="@dimen/score_left"
            android:layout_marginTop="@dimen/score_top"
            android:layout_marginEnd="@dimen/score_end"
            android:layout_marginRight="@dimen/score_right"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bmi_start"
            android:layout_marginLeft="@dimen/bmi_left"
            android:layout_marginTop="@dimen/bmi_top"
            android:layout_marginEnd="@dimen/bmi_end"
            android:layout_marginRight="@dimen/bmi_right"
            android:text="@string/bmi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/HeightInput" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

        <TextView
            android:id="@+id/scoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/score_text_start"
            android:layout_marginLeft="@dimen/score_text_left"
            android:layout_marginEnd="@dimen/score_text_end"
            android:layout_marginRight="@dimen/score_text_right"
            android:layout_marginBottom="@dimen/score_text_bottom"
            app:layout_constraintBottom_toTopOf="@+id/countButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/score" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/constrain_guide" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:layout_marginStart="@dimen/image_start"
            android:layout_marginLeft="@dimen/image_left"
            android:layout_marginTop="@dimen/image_top"
            android:layout_marginEnd="@dimen/image_end"
            android:layout_marginRight="@dimen/image_right"
            android:layout_marginBottom="@dimen/image_bottom"
            android:contentDescription="@string/this_is_first_photo"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bmi_photo" />

        <ImageButton
            android:id="@+id/switch_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/info_top"
            android:layout_marginEnd="@dimen/info_end"
            android:layout_marginRight="@dimen/info_right"
            android:layout_marginBottom="@dimen/info_bottom"
            android:contentDescription="@string/switch_activity"
            app:layout_constraintBottom_toTopOf="@+id/countButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/score"
            app:srcCompat="@drawable/question_mark" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>